<resources>
    <string name="app_name">Teqani</string>
    <string name="main_title">Teqani</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="login_continue">Continue without logging in</string>
    <string name="hint_name">Name</string>
    <string name="signin">Sign In</string>
    <string name="new_user">New User</string>
    <string name="signin_btn">Submit</string>
    <string name="skip">Skip</string>
    <string name="tutorial_header_1">Your device needs out help!</string>
    <string name="tutorial_description_1">Call us please, we beg you</string>
    <string name="default_Country">SA</string>
    <string name="pin_header">Verification Code</string>
    <string name="resend_label">Resend Code</string>
    <string name="verify_btn">Verify</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="verify_field_empty">Please, enter a valid token</string>
    <string name="name_field_empty">Name can not be empty</string>
    <string name="phone_field_empty">Phone can not be empty</string>
    <string name="no_internet">No Internet connection</string>
    <string name="both_fields_empty">Please, enter your credentials</string>
    <string name="nav_title_main">Main</string>
    <string name="nav_title_orders">Orders</string>
    <string name="nav_title_fav">Favorites</string>
    <string name="nav_title_points">Points</string>
    <string name="nav_title_offers">Offers</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_contact">Contact us</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_logout">Logout</string>
    <string name="home_title">Select your device</string>
    <string name="home_phones">Phones and tablets</string>
    <string name="home_laptops">Laptops</string>
    <string name="home_networks">Networks</string>
    <string name="home_cameras">Security Cameras</string>
</resources>
