<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:App="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/signin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        App:hintTextAppearance="@style/TeqaniHintMainEditText">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="12dp"
            android:gravity="start"
            android:hint="@string/hint_name"
            android:paddingTop="20dp"
            android:paddingBottom="18dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="normal"
            android:theme="@style/TeqaniMainEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobile_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_wrapper"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        App:hintTextAppearance="@style/TeqaniHintMainEditText">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/mobile_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="12dp"
            android:paddingTop="20dp"
            android:gravity="start"
            android:hint="@string/hint_mobile"
            android:paddingBottom="18dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="normal"
            android:theme="@style/TeqaniMainEditText" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_rounded_corners"
        android:gravity="center"
        android:paddingStart="90dp"
        android:paddingTop="8dp"
        android:paddingEnd="90dp"
        android:paddingBottom="8dp"
        android:text="@string/signin_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress"
        style="@style/AVLoadingIndicatorView"
        App:indicatorColor="#FFF"
        App:indicatorName="BallClipRotateIndicator"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</RelativeLayout>