<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.teqani.base.presentation.screens.HomeScreen.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/header"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="35dp"
            android:text="@string/home_title"
            android:textColor="@color/gray"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dark_curved"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/phones_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_phones" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/phones_image"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:text="@string/home_phones"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dark_curved"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/laptops_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_laptops" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/laptops_image"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:text="@string/home_laptops"
                    android:textColor="@color/gray" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dark_curved"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/network_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_network" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/network_image"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:text="@string/home_networks"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dark_curved"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/cameras_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_camers" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/cameras_image"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:text="@string/home_cameras"
                    android:textColor="@color/gray" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
