<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:App="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/pin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pin_header"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layoutDirection="ltr">

        <EditText
            android:id="@+id/pin_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/bg_rounded_corners_slight_left"
            android:cursorVisible="false"
            android:focusedByDefault="true"
            android:gravity="center"
            android:hint="0"
            android:maxLength="1"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pin_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/bg_rounded_corners_slight_left"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="0"
            android:maxLength="1"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pin_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/bg_rounded_corners_slight_right"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="0"
            android:maxLength="1"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingTop="0dp"
            android:paddingEnd="18dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pin_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/bg_rounded_corners_slight_right"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="0"
            android:maxLength="1"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_rounded_corners"
        android:gravity="center"
        android:paddingStart="90dp"
        android:paddingTop="8dp"
        android:paddingEnd="90dp"
        android:paddingBottom="8dp"
        android:text="@string/verify_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resend_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/resend_label"
        android:textAlignment="center"
        android:textColor="@color/gray_light"
        android:textSize="16sp" />


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        App:indicatorColor="#FFF"
        App:indicatorName="BallClipRotateIndicator" />


</RelativeLayout>